# cheboksariks

./: README.md  pyproject.toml  sample.env
src/: decorators.py  generators.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: mylog.txt  test.utils.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py  tests.py
